お気に入りの写真と新しいルーティングページでお気に入りの写真のリスト画面を作成します

--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -8,17 +8,20 @@
     <%= form.file_field :image %>
     <%= form.hidden_field :image_cache %>
   </div>
+
+
+ <%
+=begin%>
+ <%= form_with(model: [@feed, @comment], local: true) do |f| %> 
+  <%= f.text_field :content %>
+  <%= f.submit "コメントする", class: "btn btn-primary" %>
+<% end %>  
+<%
+=end%>
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
 
-
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.file_field :image %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
