--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <p>
   <strong>Image:</strong>
-  <%= image_tag @feed.image.url %>
+  <%= image_tag @feed.image.url  if @feed.image.present?%>
 </p>
 <%= link_to 'Edit', edit_feed_path(@feed) %> |
 <%= link_to 'Back', feeds_path %>
@@ -12,4 +12,16 @@
   <% else %>
     <%= link_to 'お気に入りする', favorites_path(feed_id: @feed.id), method: :post, class: 'btn btn-primary' %>
   <% end %>
-  <% end %>
+
+
+<p id="notice"><%= notice %></p>
+<p>
+  <strong>content:</strong>
+  <%= @feed.content %>
+</p>
+<%= link_to 'Edit', edit_feed_path(@feed) %> |
+<%= link_to 'Back', feeds_path %> 
+
+<% end %> 
+
+
