--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,12 @@
 <h1><%= @user.name %>のページ</h1>
 <p>メールアドレス: <%= @user.email %></p>
+
+<p>
+  <strong>Image:</strong>
+  <%= image_tag @user.image.url  if @user.image.present?%>
+</p>
+
+<%= link_to "編集", edit_user_path(@user) %>
+
+
+
