--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -6,7 +6,7 @@
     <!-- アップロードした画像を表示させるための記述 -->
     <%= form.file_field :image %>
     <%= form.hidden_field :image_cache %>
-    <%= form.text_area :content %>
+    <%= form.text_area :comment %>
   </div>
   <div class="actions">
     <%= form.submit %>
