--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,10 @@
 </p>
 
 <%= link_to "編集", edit_user_path(@user) %>
-
+<%
+=begin%>
+ <%= link_to "編集", favorite_index_path(@user) %> 
+<%
+=end%>
 
 
