--- a/app/views/feeds/confirm.html.erb
+++ b/app/views/feeds/confirm.html.erb
@@ -2,6 +2,7 @@
 <%= form_with(model: @feed, url: feeds_path, local: true) do |form| %>
   <!-- 確認画面でアップロードした画像を表示させるための記述 -->
   <%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %>
+  <p>本文:<%= @feed.comment %></p>
   <%= form.hidden_field :image_cache %>
     <%= form.hidden_field :comment %>
   <%= form.submit "投稿する" %>
